--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Hola Mundo!</title>
 </head>
 <body>
-    
+    <h1>Bienvenidos a mi primer página web!</h1>
+    <h2>Titulo 2</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Dolore ea ipsam voluptate cum nobis possimus provident optio laborum inventore ad itaque saepe, voluptatum at. 
+        Repellat et omnis cum animi ut.
+    </p>
+    <b>Negrita</b>
+    <i>Itálica</i>
+    <strike>Tachada</strike>
+    <small>Chiquita</small>
+    <a>Que es?</a>
+    <address>Y esto?</address>
 </body>
 </html>
