--- a/index.html
+++ b/index.html
@@ -6,18 +6,11 @@
     <title>Hola Mundo!</title>
 </head>
 <body>
-    <h1>Bienvenidos a mi primer página web!</h1>
-    <h2>Titulo 2</h2>
+    <h1>¡Hola Mundo!</h1>
+    <h2>Subtítulo de mi página web</h2>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Dolore ea ipsam voluptate cum nobis possimus provident optio laborum inventore ad itaque saepe, voluptatum at. 
-        Repellat et omnis cum animi ut.
-    </p>
-    <b>Negrita</b>
-    <i>Itálica</i>
-    <strike>Tachada</strike>
-    <small>Chiquita</small>
-    <a>Que es?</a>
-    <address>Y esto?</address>
+        <i>Este es un párrafo de prueba de mi <b>primera página web.</b>
+        Estoy empezando a ver como se programa en HTML5.</i> Haz <a href="https://www.youtube.com/@soydalto">click aquí</a> para más información. 
+    </p>     
 </body>
 </html>
