--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>¡Hola Mundo!</h1>
     <h2>Subtítulo de mi página web</h2>
     <p>
-        <i>Este es un párrafo de prueba de mi <b>primera página web.</b>
-        Estoy empezando a ver como se programa en HTML5.</i> Haz <a href="https://www.youtube.com/@soydalto">click aquí</a> para más información. 
+        <i>Este es un párrafo de prueba de mi <b>primera página web.</b><br>
+        Estoy empezando a ver como se programa en HTML5. En más información encontraras muchísima información sobre este y otros temas.</i><br> Haz <a href="https://www.youtube.com/@soydalto">click aquí</a> para más información. 
     </p>     
 </body>
 </html>
