--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <p>
         <i>Este es un párrafo de prueba de mi <b>primera página web.</b><br>
         Estoy empezando a ver como se programa en HTML5. En más información encontraras muchísima información sobre este y otros temas.</i><br> Haz <a href="https://www.youtube.com/@soydalto">click aquí</a> para más información. 
-    </p>     
+    </p>
+    <b>Negrita</b>
+    <i>Italica</i>
+    <strike>Tachada</strike>     
+    <small>Letra Chiquita</small>
+
 </body>
 </html>
