--- a/Index2.html
+++ b/Index2.html
@@ -16,5 +16,16 @@
         Quiero ver como se ve la palabra <b>Tenda</b> en negrita y la misma palabra en itálica: <i>Tenda</i>. <br><br> 
         Haz <a href="https://www.youtube.com/watch?v=kN1XP-Bef7w&t=3493s" target="_blank">click aquí</a> para más infomarción.
     </p>
+    <h1>Vemos Listas</h1>
+    <h2>Listas desordenadas (ul)</h2>
+    <ul> 
+        <li>Leche</li>
+        <li>Pan</li>
+    </ul>
+    <h2>Listas ordenadas(ol)</h2>
+    <ol>
+        <li>Queso</li>
+        <li>Manteca</li>
+    </ol>
 </body>
 </html>
